<?xml version="1.0"?>
<package>
  <name>one_shot_learning</name>
  <version>0.0.1</version>
  <description>CAROS one_shot_learning node</description>
  <maintainer email="thso@dti.dk">thso</maintainer>
  <license>BSD</license>
 <!-- <url type="website">https://gitlab.com/caro-sdu/caros/wikis/home</url>
  <url type="repository">https://gitlab.com/caro-sdu/caros.git</url>
  <url type="bugtracker">https://gitlab.com/caro-sdu/caros/issues</url>-->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>caros_common_msgs</build_depend>
  <build_depend>caros_common</build_depend>
  <build_depend>pose_estimation_covis</build_depend> 
  <build_depend>sensor_msgs</build_depend> 
  <build_depend>projector_select_image</build_depend>
  
  

  <run_depend>roscpp</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>caros_common_msgs</run_depend>
  <run_depend>caros_common</run_depend>
  <run_depend>pose_estimation_covis</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>projector_select_image</run_depend>
  
  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
