<?xml version="1.0"?>
<package>
  <name>pose_estimation_covis</name>
  <version>0.0.1</version>
  <description>CAROS pose estimation node</description>
  <maintainer email="thso@dti.dk">thso</maintainer>
  <license>BSD</license>
 <!-- <url type="website">https://gitlab.com/caro-sdu/caros/wikis/home</url>
  <url type="repository">https://gitlab.com/caro-sdu/caros.git</url>
  <url type="bugtracker">https://gitlab.com/caro-sdu/caros/issues</url>-->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>point_cloud_visualization</build_depend>
  <build_depend>caros_common_msgs</build_depend>
  <build_depend>caros_common</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>geometry_msgs</build_depend> 
  <build_depend>sensor_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>point_cloud_visualization</run_depend>
  <run_depend>caros_common_msgs</run_depend>
  <run_depend>caros_common</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
